# PodFlow

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow_home/: airflow.cfg
airflow_home/dags/: podflow_dag_loader.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_V1.md  CONTRIBUTING.md  DATABASE.md  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DIAGRAMS.md  DOMAIN_MODEL.md  PROJECT_STRUCTURE.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  ROADMAP.md
podflow/: cli.py
podflow/airflow/: __init__.py  podcast_pipeline.py
podflow/api/: __init__.py  dependencies.py  main.py  middleware.py  schemas.py
podflow/api/routers/: __init__.py  download.py  episodes.py  ingest.py  metrics.py  pipeline.py  podcasts.py
podflow/config/: settings.py
podflow/database/: RSS Feed URL  models.py  repository.py  session.py
podflow/database/migrations/: env.py
podflow/database/migrations/versions/: da9f2ed2c921_baseline.py
podflow/domain/: __init__.py  episode.py  pipeline.py  podcast.py  processing_state.py
podflow/downloader/: audio.py  filesystem.py
podflow/exceptions/: exceptions.py
podflow/ingestion/: episode_parser.py  rss_reader.py
podflow/logging/: events.py  logger.py
podflow/services/: __init__.py  download_service.py  episode_query_service.py  metrics_service.py  pipeline_service.py  podcast_query_service.py  podcast_service.py
tests/: conftest.py  test_download_service.py  test_downloader.py  test_integration.py  test_metrics.py
tests/api/: conftest.py  test_downloads.py  test_episodes.py  test_ingestions.py  test_pipeline.py  test_platform.py  test_podcasts.py  test_production_readiness.py
